--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         I am a former Student of Ryan International School from which I have completed my Secondary Education and Higher Secondary Education.
                     </p>
                     <p>
-                        I have a proficiency in programming languages like C/C++ , HTML/CSS. As a web developer I enjoy building websites and use my knowledge to make a difference in people's lives. That's why I am pretty excited to make a deep impact at a highly growth company.
+                        I have a proficiency in programming languages like HTML/CSS. As a web developer I enjoy building websites and use my knowledge to make a difference in people's lives. That's why I am pretty excited to make a deep impact at a highly growth company.
                     </p>
                 </div>
 
@@ -143,34 +143,26 @@
 
                     <div class="skill">
                         <span class="chart" data-percent="67">
-				    		<span class="percent">85</span>
+				    		<span class="percent">67</span>
                         <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>CSS</h4>
                         <p>Used in most of my web based projects</p>
                     </div>
 
-                    <div class="skill">
-                        <span class="chart" data-percent="72">
-				    		<span class="percent">75</span>
-                        <canvas height="152" width="152"></canvas>
-                        </span>
-                        <h4>C</h4>
-                        <p>Used as a basic programming language</p>
-                    </div>
 
                     <div class="skill">
-                        <span class="chart" data-percent="72">
-				    		<span class="percent">72</span>
+                        <span class="chart" data-percent="67">
+				    		<span class="percent">67</span>
                         <canvas height="152" width="152"></canvas>
                         </span>
-                        <h4>C++</h4>
-                        <p>Used as a basic programming language</p>
+                        <h4>BOOTSTRAP</h4>
+                        <p>Used in most of my web based projects</p>
                     </div>
 
                     <div class="skill">
                         <span class="chart" data-percent="14">
-				    		<span class="percent">1</span>
+				    		<span class="percent">14</span>
                         <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>JAVASCRIPT</h4>
@@ -203,22 +195,8 @@
                                 <i class="fa fa-clock"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">4</h2>
+                                <h2 class="counter">2</h2>
                                 <h3>Years Experience</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="squareItem">
-                        <div class="squareInnerContainer">
-                            <div class="squareIcon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            <div class="squareContent">
-                                <h2 class="counter">137</h2>
-                                <h3>Clients</h3>
                             </div>
                         </div>
                     </div>
@@ -232,7 +210,7 @@
                             </div>
                             <div class="squareContent">
                                 <h2 class="counter">3</h2>
-                                <h3>Websites Made</h3>
+                                <h3>Projects</h3>
                             </div>
                         </div>
                     </div>
