--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <h4>My name is Priyank Shah</h4>
 
                     <p>
-                        I am a Student of Shri Sitarambhai Naranji Patel Institute of Technology and Research Centre, Bardoli, Surat where I am pursuing my Bachelor of Engineering (B.E.) in Computer Science (CS).
+                        I am a Student of Shri Sitarambhai Naranji Patel Institute of Technology and Research Centre, Bardoli, Surat where I am pursuing my Bachelor of Engineering (B.E.) in Computer Engineering.
                     </p>
                     <p>
                         I am a former Student of Ryan International School from which I have completed my Secondary Education and Higher Secondary Education.
