--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 <div class="owl-carousel owl-theme">
 
                     <div class="skill">
-                        <span class="chart" data-percent="90">
-				    		<span class="percent">90</span>
+                        <span class="chart" data-percent="80">
+				    		<span class="percent">80</span>
                         <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>HTML</h4>
@@ -152,24 +152,31 @@
 
 
                     <div class="skill">
-                        <span class="chart" data-percent="67">
-				    		<span class="percent">67</span>
+                        <span class="chart" data-percent="40">
+				    		<span class="percent">40</span>
                         <canvas height="152" width="152"></canvas>
                         </span>
-                        <h4>BOOTSTRAP</h4>
-                        <p>Used in most of my web based projects</p>
-                    </div>
-
-                    <div class="skill">
-                        <span class="chart" data-percent="14">
-				    		<span class="percent">14</span>
-                        <canvas height="152" width="152"></canvas>
-                        </span>
-                        <h4>JAVASCRIPT</h4>
+                        <h4>Bootstrap</h4>
                         <p>A new skill I am learning</p>
                     </div>
 
+                    <div class="skill">
+                        <span class="chart" data-percent="1">
+				    		<span class="percent">1</span>
+                        <canvas height="152" width="152"></canvas>
+                        </span>
+                        <h4>JavaScript</h4>
+                        <p>A new skill I am learning</p>
+                    </div>
 
+                    <div class="skill">
+                        <span class="chart" data-percent="5">
+				    		<span class="percent">5</span>
+                        <canvas height="152" width="152"></canvas>
+                        </span>
+                        <h4>GitHub</h4>
+                        <p>Used in most of my web based projects</p>
+                    </div>
 
                 </div>
 
@@ -195,7 +202,7 @@
                                 <i class="fa fa-clock"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">2</h2>
+                                <h2 class="counter">1</h2>
                                 <h3>Years Experience</h3>
                             </div>
                         </div>
